# protocol-buffers-language-server

./: .bazelrc  .deepsource.toml  .editorconfig  .errcheckignore  .gitattributes  .gitignore  .golangci.yml  .reviewdog.yml  BUILD.bazel  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  WORKSPACE  go.mod  go.sum
.circleci/: config.yml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/workflows/: go.yml  main.yml  test.yml
bazel/: deps.bzl
cmd/protocol-buffers-language-server/: BUILD.bazel  main.go
docs/: development.md  usage.md
hack/: expose-generated-go.sh  install-bazel.sh  tools.go
pkg/config/: BUILD.bazel  config.go  config_test.go  doc.go
pkg/internal/testutil/: BUILD.bazel  testutil.go
pkg/logging/: BUILD.bazel  context.go  doc.go  logging.go
pkg/lsp/: BUILD.bazel  doc.go
pkg/lsp/server/: BUILD.bazel  completion.go  definition.go  definition_test.go  general.go  server.go  text_synchronization.go  util.go  util_test.go  workspace.go
pkg/lsp/source/: BUILD.bazel  doc.go  file.go  session.go  view.go  view_test.go
pkg/lsp/source/sourcetest/: BUILD.bazel  mock.go
pkg/lsp/source/testdata/: BUILD.bazel  test.proto
pkg/proto/parser/: BUILD.bazel  parser.go  parser_test.go
pkg/proto/registry/: BUILD.bazel  doc.go  enum.go  import.go  import_test.go  map.go  message.go  oneof.go  package.go  proto.go  rpc.go  service.go
pkg/proto/registry/registrytest/: BUILD.bazel  mock.go
pkg/proto/types/: BUILD.bazel  types.go  types_test.go
