load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/micnncim/protocol-buffers-language-server/cmd/protocol-buffers-language-server",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "protocol-buffers-language-server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
