load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "logging.go",
    ],
    importpath = "github.com/micnncim/protocol-buffers-language-server/pkg/logging",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_x_xerrors//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
        "@org_uber_go_zap//zapcore:go_default_library",
    ],
)
