load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "definition.go",
        "general.go",
        "server.go",
    ],
    importpath = "github.com/micnncim/protocol-buffers-language-server/pkg/lsp/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/registry:go_default_library",
        "@com_github_go_language_server_jsonrpc2//:go_default_library",
        "@com_github_go_language_server_protocol//:go_default_library",
        "@org_golang_x_xerrors//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)
