# Copyright 2019 The Protocol Buffers Language Server Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "completion.go",
        "definition.go",
        "general.go",
        "server.go",
        "text_synchronization.go",
        "workspace.go",
    ],
    importpath = "github.com/micnncim/protocol-buffers-language-server/pkg/lsp/server",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/config:go_default_library",
        "//pkg/logging:go_default_library",
        "//pkg/lsp/source:go_default_library",
        "//pkg/proto/types:go_default_library",
        "@com_github_go_language_server_jsonrpc2//:go_default_library",
        "@com_github_go_language_server_protocol//:go_default_library",
        "@com_github_go_language_server_uri//:go_default_library",
        "@org_uber_go_zap//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "completion_test.go",
        "definition_test.go",
        "general_test.go",
        "server_test.go",
        "text_synchronization_test.go",
        "workspace_test.go",
    ],
    embed = [":go_default_library"],
)
