load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "file.go",
        "session.go",
        "view.go",
    ],
    importpath = "github.com/micnncim/protocol-buffers-language-server/pkg/lsp/source",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/registry:go_default_library",
        "@com_github_go_language_server_uri//:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "session_test.go",
        "view_test.go",
    ],
    embed = [":go_default_library"],
)
