# Copyright 2019 The Protocol Buffers Language Server Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "file.go",
        "session.go",
        "view.go",
    ],
    importpath = "github.com/micnncim/protocol-buffers-language-server/pkg/lsp/source",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/proto/parser:go_default_library",
        "//pkg/proto/registry:go_default_library",
        "@com_github_go_language_server_uri//:go_default_library",
        "@org_uber_go_atomic//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "session_test.go",
        "view_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":go_default_library"],
    deps = [
        "//pkg/internal/testutil:go_default_library",
        "//pkg/proto/registry:go_default_library",
        "@com_github_go_language_server_uri//:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
