# Copyright 2019 The Protocol Buffers Language Server Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "enum.go",
        "map.go",
        "message.go",
        "oneof.go",
        "package.go",
        "proto.go",
        "service.go",
    ],
    importpath = "github.com/micnncim/protocol-buffers-language-server/pkg/proto/registry",
    visibility = ["//visibility:public"],
    deps = ["@com_github_emicklei_proto//:go_default_library"],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "enum_test.go",
        "map_test.go",
        "message_test.go",
        "oneof_test.go",
        "package_test.go",
        "proto_test.go",
        "service_test.go",
    ],
    embed = [":go_default_library"],
)
