load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mock.go",
        "source.mock.go",
    ],
    importpath = "github.com/micnncim/protocol-buffers-language-server/pkg/lsp/source/sourcetest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/lsp/source:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)

load("//bazel:gomock.bzl", "gomock")

gomock(
    name = "mock_source",
    out = "source.mock.go",
    interfaces = [
        "Session",
        "View",
        "ProtoFile",
    ],
    library = "//pkg/lsp/source:go_default_library",
    package = "sourcetest",
)

