# Copyright 2019 The Protocol Buffers Language Server Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "mock.go",
        "source.mock.go",
    ],
    importpath = "github.com/micnncim/protocol-buffers-language-server/pkg/lsp/source/sourcetest",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/lsp/source:go_default_library",
        "//pkg/proto/registry:go_default_library",
        "@com_github_go_language_server_uri//:go_default_library",
        "@com_github_golang_mock//gomock:go_default_library",
    ],
)

load("//bazel:gomock.bzl", "gomock")

gomock(
    name = "mock_source",
    out = "source.mock.go",
    interfaces = [
        "File",
        "FileHandle",
        "FileSystem",
        "Session",
        "View",
    ],
    library = "//pkg/lsp/source:go_default_library",
    package = "sourcetest",
)
