load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "test_proto",
    srcs = ["test.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "test_go_proto",
    importpath = "github.com/micnncim/protocol-buffers-language-server/pkg/lsp/source/testdata",
    proto = ":test_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "go_default_library",
    embed = [":test_go_proto"],
    importpath = "github.com/micnncim/protocol-buffers-language-server/pkg/lsp/source/testdata",
    visibility = ["//visibility:public"],
)
